clusters/nishir/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flux
  namespace: flux-system
spec:
  gatewayClassName: flux
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-webhooks-flux
            group: ""
            kind: Secret
