clusters/nishir/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
  namespace: flux-system
spec:
  parentRefs:
    - name: flux
      sectionName: https
  hostnames:
    - webhooks.flux.i.shikanime.studio
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
