clusters/nishir/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: shikanime
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
